@@ -2,12 +2,12 @@ Opera7 is powerful if you use the either web for work or for entertainment.
 Features:
 * Supports HTML 3.2, 4.0, 4.01; XHTML 1.0; WML 1.3 & 2.0; XML; CSS 1.0, 2.0,
   2.1, 3.0; EcmaScript ECMA-262 2ed, 3ed (JavaScript 1.3/1.5 Core); DOM 1, 2
-* BiDi support, Small Screen Rendering (TM) 
+* BiDi support, Small Screen Rendering (TM)
 * Browses FTP Sites, support for browsing local files
 * Proxy server support
 * File transfer, File upload support
 * Built-in M2 mail client
-* Handles cookies
+* IRC-compatible chat client, Newsreader, and RSS newsfeeds
 * Hot list, bookmarks and bookmark bar
 * Unique mouse gestures for easier browsing
 * Pop-up defense features
@@ -18,3 +18,4 @@ Features:
 * Customizable toolbar icons
 * Keyboard link navigation
 * Printing (PostScript)
+* Handles cookies
