@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.16 2004/04/30 05:26:00 snj Exp $
+# $NetBSD: Makefile,v 1.17 2004/05/14 21:03:47 jdolecek Exp $
 
 DISTNAME=	opera-${OPERA_PKG_VERSION}
 PKGREVISION=	# empty
@@ -43,8 +43,8 @@ PLIST_SRC=	${WRKDIR}/PLIST_DYNAMIC
 EXTRACT_SUFX=		.rpm
 OPERA_ARCH=		.i386
 OPERA_LANG=		en
-OPERA_VER_DATE=		20031119
-OPERA_PKG_VERSION=	7.23
+OPERA_VER_DATE=		20040511
+OPERA_PKG_VERSION=	7.50
 OPERA_DIR=		linux/${OPERA_PKG_VERSION:S/.//g:C/beta.*//}/final/${OPERA_LANG}/${OPERA_ARCH:S/.//}/static
 OPERA_DIST_VERSION=	${OPERA_PKG_VERSION:C/beta.*//}-${OPERA_VER_DATE}.1-static-qt
 
@@ -54,8 +54,8 @@ RPMFILES=	${DISTFILES}
 EXTRACT_SUFX=		.tar.bz2
 OPERA_ARCH=		.i386.freebsd
 OPERA_LANG=		en
-OPERA_VER_DATE=		20031119
-OPERA_PKG_VERSION=	7.23
+OPERA_VER_DATE=		20040511
+OPERA_PKG_VERSION=	7.50
 OPERA_DIR=		unix/freebsd/${OPERA_PKG_VERSION:S/.//g:}/final/${OPERA_LANG}/
 OPERA_DIST_VERSION=	${OPERA_PKG_VERSION}-${OPERA_VER_DATE}.1-static-qt
 
